--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,14 @@ env:
   - NODE_ENV: test
   - TRAVIS: true
 addons:
-  postgresql: '11.5'
+  postgresql: "11.5"
 before_install:
   - sudo apt-get update
   - sudo apt-get install -y postgresql-11 postgresql-client-11
   - sudo cp /etc/postgresql/{9.6,11}/main/pg_hba.conf
 before_script:
   - psql --version
-  - psql -c 'create database ts_api_test;' -U postgres
+  - psql -c "create database ts_api_test;" -U postgres
   - npm i -g sequelize-cli gulp-cli
   - cd server/
   - sequelize db:migrate --env test
