Configura Integração Contínua

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -3,7 +3,6 @@
         "username": "postgres",
         "password": "pgroot",
         "database": "ts_api_test",
-        "host": "localhost",
-        "dialect": "postgres"
+        "host": "localhost"
     }
 }
