Configura Integração Contínua

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,5 +1,5 @@
 { 
-    "teste": {
+    "test": {
         "username": "postgres",
         "password": "pgroot",
         "database": "ts_api_test",
