--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "API do curso Udemy",
   "main": "server/server.js",
   "scripts": {
-    "start": "PORT=5000 cross-env NODE_ENV=development ./node_modules/.bin/ts-node ./server/server.ts",
-    "builded": "PORT=5000 cross-env NODE_ENV=production node ./dist/server/server.js",
+    "start": "cross-env PORT=5000 NODE_ENV=development ./node_modules/.bin/ts-node ./server/server.ts",
+    "builded": "cross-env PORT=5000 NODE_ENV=production node ./dist/server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "unit-test": "mocha --opts ./dist/tests/unit/config/mocha.opts ./dist/tests/unit/unit.test.js",
     "integration-test": "cross-env NODE_ENV=test mocha --opts ./dist/tests/integration/config/mocha.opts ./dist/tests/integration/integration.test.js",
