--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "cross-env PORT=5000 NODE_ENV=development ./node_modules/.bin/ts-node ./server/server.ts",
     "builded": "cross-env PORT=5000 NODE_ENV=production node ./dist/server/server.js",
+    "dbconfig": "cross-env NODE_ENV=test node ./dist/server/config/dbconfig.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "unit-test": "cross-env NODE_ENV=test mocha --opts ./dist/tests/unit/config/mocha.opts ./dist/tests/unit/unit.test.js",
     "integration-test": "cross-env NODE_ENV=test mocha --opts ./dist/tests/integration/config/mocha.opts ./dist/tests/integration/integration.test.js",
